# webassembly_cpp_demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  api.cpp  index.html  main.wasm  web_api.cpp  web_api.js  web_api.wasm
.github/workflows/: build.yml
cpp/lib/: util.cpp  util.h
cpp/src/: CMakeLists.txt  demo.cpp  demo.h
js/: button.js  setup.js
lib/: Makefile  util.cpp
web/: CMakeLists.txt  index.html  web_api.cpp
web/js/: button.js  setup.js
